--- a/schoolFrontend/src/app/pages/teacher-dashboard/klass/klass.component.html
+++ b/schoolFrontend/src/app/pages/teacher-dashboard/klass/klass.component.html
@@ -6,15 +6,28 @@
       <div id="ass-grid">
         <!-- ------------------ASSIGNMENTS----------------- -->
         <div class="ass-wrap bg-white rounded shadow fake-border">
-          <div class="d-flex justify-content-between align-items-baseline my-3 mx-3">
+          <div class="m-3">
             <h4>Issued Assignments</h4>
-            <a (click)="switchPage()" class="color">
-              <small *ngIf="upcoming; else past">Past</small>
-              <ng-template #past><small>Upcoming</small></ng-template>
-            </a>
+            <div class="d-flex justify-content-between align-items-center">
+              <app-switch-upcoming
+                [upcoming]="upcoming"
+                (switchUpcoming)="switchUpcoming()"
+              ></app-switch-upcoming>
+
+              <button
+                type="button"
+                class="btn btn-primary btn-sm"
+                (click)="setAssignmentToUpdate('New Assignment')"
+                data-bs-toggle="modal"
+                href="#assignmentModalToggle"
+              >
+                <i class="bi bi-plus"> </i> New
+              </button>
+            </div>
           </div>
-          <div *ngIf="assignments$ | async as assignments; else loading" class="mx-3">
-            <div class="assignments">
+
+          <div *ngIf="assignments$ | async as assignments; else loadingIssued" class="mx-3">
+            <div class="assignments" [style.min-height.px]="issuedAssPageSize * 57 + 59">
               <div *ngFor="let assignment of assignments.content" class="ass-item text-reset">
                 <div class="issued text-dark pe-2">
                   <div>
@@ -25,82 +38,64 @@
                     <p class="text-muted"><i class="bi bi-flag"></i> Due {{ assignment.dueDate }}</p>
                   </div>
                 </div>
+
                 <div *ngIf="upcoming" class="icons py-2">
                   <a
                     class="link-info"
                     (click)="setAssignmentToUpdate('Update Assignment', assignment)"
                     data-bs-toggle="modal"
                     href="#assignmentModalToggle"
-                    ><i class="bi bi-pencil-square me-2"></i
-                  ></a>
+                  >
+                    <i class="bi bi-pencil-square me-2"> </i>
+                  </a>
                   <a
                     (click)="setAssignmentToDeleteId(assignment.id)"
                     data-bs-toggle="modal"
                     href="#deleteAssignmentModal"
                     class="link-info"
-                    ><i class="bi bi-trash2"></i
-                  ></a>
+                  >
+                    <i class="bi bi-trash2"> </i>
+                  </a>
                 </div>
               </div>
+
               <app-delete-assignment (updatedAss)="updateAll()"></app-delete-assignment>
             </div>
-            <div class="d-flex justify-content-center">
-              <div class="px-4 pb-1 d-inline-flex align-items-baseline">
-                <small class="text-muted me-4">Page {{ page + 1 }} of {{ assignments.totalPages }}</small>
-                <button (click)="paginate(-1)" class="btn pag-btn" [disabled]="page + 1 == 1">
-                  <i class="bi bi-chevron-left me-2"></i>
-                </button>
-                <button
-                  (click)="paginate(1)"
-                  class="btn pag-btn"
-                  [disabled]="page + 1 == assignments.totalPages"
-                >
-                  <i class="bi bi-chevron-right ms-2"></i>
-                </button>
-              </div>
-            </div>
+
+            <app-paginator
+              [pageable]="assignments"
+              [pageNum]="issuedAssPageNum"
+              (switchPage)="paginateIssued($event)"
+            ></app-paginator>
           </div>
 
-          <a
-            (click)="setAssignmentToUpdate('New Assignment')"
-            id="new-ass"
-            data-bs-toggle="modal"
-            href="#assignmentModalToggle"
-            ><i class="bi bi-plus"></i
-          ></a>
           <app-assignment-modal
             [klass]="klass"
             [loggedUser]="loggedUser"
-            [assignments$]="assignments$"
             (updatedAss)="updateAll()"
             class="position-absolute"
           ></app-assignment-modal>
 
-          <ng-template #loading>
-            <div class="assignments-placeholder text-center">
+          <ng-template #loadingIssued>
+            <div
+              class="assignments assignments-placeholder"
+              [style.min-height.px]="issuedAssPageSize * 57 + 59"
+            >
               <svg class="spinner big-spin" viewBox="0 0 50 50">
                 <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
               </svg>
             </div>
-            <div class="d-flex justify-content-center">
-              <div class="px-4 pb-1 d-inline-flex align-items-baseline">
-                <small class="text-muted me-4">Page {{ page + 1 }} of ?</small>
-                <button class="btn pag-btn" disabled>
-                  <i class="bi bi-chevron-left me-2"></i>
-                </button>
-                <button class="btn pag-btn" disabled>
-                  <i class="bi bi-chevron-right ms-2"></i>
-                </button>
-              </div>
-            </div>
+
+            <app-paginator></app-paginator>
           </ng-template>
         </div>
         <!-- ------------------ASSIGNMENTS----------------- -->
+
         <!-- ------------------COMPL ASS----------------- -->
         <div class="ass-wrap bg-white rounded shadow fake-border">
-          <h4 class="my-3 mx-3">Submitted</h4>
-          <div *ngIf="complAssignments$ | async as complAssignments; else loading" class="mx-3">
-            <div class="assignments">
+          <h4 class="m-3">Submitted</h4>
+          <div *ngIf="complAssignments$ | async as complAssignments; else loadingSubmitted" class="mx-3">
+            <div class="assignments" [style.min-height.px]="submittedAssPageSize * 57 + 40">
               <div *ngFor="let complAss of complAssignments.content" class="ass-item text-reset">
                 <input type="checkbox" class="form-check-input" [checked]="complAss.grade" disabled />
                 <a
@@ -120,44 +115,28 @@
                   </div>
                 </a>
               </div>
+
               <app-grade-modal (updatedAss)="updateAll()"></app-grade-modal>
             </div>
-            <div class="d-flex justify-content-center">
-              <div class="px-4 pb-1 d-inline-flex align-items-baseline">
-                <small class="text-muted me-4"
-                  >Page {{ page2 + 1 }} of {{ complAssignments.totalPages }}</small
-                >
-                <button (click)="paginate2(-1)" class="btn pag-btn" [disabled]="page2 + 1 == 1">
-                  <i class="bi bi-chevron-left me-2"></i>
-                </button>
-                <button
-                  (click)="paginate2(1)"
-                  class="btn pag-btn"
-                  [disabled]="page2 + 1 == complAssignments.totalPages"
-                >
-                  <i class="bi bi-chevron-right ms-2"></i>
-                </button>
-              </div>
-            </div>
+
+            <app-paginator
+              [pageable]="complAssignments"
+              [pageNum]="submittedAssPageNum"
+              (switchPage)="paginateSubmitted($event)"
+            ></app-paginator>
           </div>
 
-          <ng-template #loading>
-            <div class="assignments-placeholder text-center">
+          <ng-template #loadingSubmitted>
+            <div
+              class="assignments assignments-placeholder"
+              [style.min-height.px]="submittedAssPageSize * 57 + 40"
+            >
               <svg class="spinner big-spin" viewBox="0 0 50 50">
                 <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
               </svg>
             </div>
-            <div class="d-flex justify-content-center">
-              <div class="px-4 pb-1 d-inline-flex align-items-baseline">
-                <small class="text-muted me-4">Page {{ page2 + 1 }} of ?</small>
-                <button class="btn pag-btn" disabled>
-                  <i class="bi bi-chevron-left me-2"></i>
-                </button>
-                <button class="btn pag-btn" disabled>
-                  <i class="bi bi-chevron-right ms-2"></i>
-                </button>
-              </div>
-            </div>
+
+            <app-paginator></app-paginator>
           </ng-template>
         </div>
         <!-- ------------------COMPL ASS----------------- -->
