--- a/schoolFrontend/src/app/pages/management/management.component.scss
+++ b/schoolFrontend/src/app/pages/management/management.component.scss
@@ -1,7 +1,34 @@
-input[type=checkbox] {
-    cursor: pointer;
+.btn-light:not(:hover) {
+  background-color: white;
+}
+
+input[type='checkbox'] {
+  cursor: pointer;
 }
 
 .user-row {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+.loading-placeholder {
+  position: relative;
+
+  .table {
+    min-height: 7rem;
+
+    tbody {
+      opacity: 0.3;
+    }
+  }
+
+  .spinner-wrp {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    .big-spin {
+      margin: 0;
+    }
+  }
 }
