--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.scss
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.scss
@@ -111,6 +111,17 @@ app-calendar {
   align-self: stretch;
 }
 
+app-paginator {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0 1.5rem;
+  padding-bottom: 0.25rem;
+  display: flex;
+  justify-content: center;
+}
+
 // ============MEDIA QUERY============
 
 @media screen and (min-width: 425px) {
