FE: Style remake

--- a/schoolFrontend/src/app/components/grade-modal/grade-modal.component.html
+++ b/schoolFrontend/src/app/components/grade-modal/grade-modal.component.html
@@ -34,7 +34,7 @@
         <div class="btn-wrp">
           <button
             id="grade-btn"
-            class="submit-btn btn btn-dark px-4"
+            class="submit-btn btn btn-primary px-4"
             type="submit"
             [disabled]="gradeForm.invalid"
           >
