--- a/schoolFrontend/src/app/components/assignment-modal/assignment-modal.component.html
+++ b/schoolFrontend/src/app/components/assignment-modal/assignment-modal.component.html
@@ -33,7 +33,7 @@
           All fields must be filled. Date can't be a past date
         </small>
         <div class="btn-wrp">
-          <button id="ass-btn" class="btn btn-dark px-4" type="submit" [disabled]="assignmentForm.invalid">
+          <button id="ass-btn" class="btn btn-primary px-4" type="submit" [disabled]="assignmentForm.invalid">
             <span *ngIf="!loading">Submit</span>
             <svg *ngIf="loading" class="spinner" viewBox="0 0 50 50">
               <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
