--- a/schoolFrontend/src/app/pages/management/management.component.html
+++ b/schoolFrontend/src/app/pages/management/management.component.html
@@ -4,14 +4,14 @@
       <button type="button" class="btn btn-light shadow-sm" (click)="undoChanges()">
         <i class="bi bi-arrow-counterclockwise"></i> Undo
       </button>
-      <button type="button" class="btn btn-dark shadow-sm" (click)="save()">Save</button>
+      <button type="button" class="btn btn-primary shadow-sm" (click)="save()">Save</button>
     </ng-container>
 
     <ng-template #disabledBtns>
       <button type="button" class="btn btn-light shadow-sm" disabled>
         <i class="bi bi-arrow-counterclockwise"></i> Undo
       </button>
-      <button type="button" class="btn btn-dark shadow-sm" disabled>Save</button>
+      <button type="button" class="btn btn-primary shadow-sm" disabled>Save</button>
     </ng-template>
   </div>
 </div>
